remove link to row and fix aligning in copy button

--- a/src/components/MDXShortcodes/styles.module.scss
+++ b/src/components/MDXShortcodes/styles.module.scss
@@ -88,6 +88,9 @@
 .copy {
     cursor: pointer;
     position: relative;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
 }
 
 .copyIcon {
